--- a/index.html
+++ b/index.html
@@ -1,43 +1,219 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Demo page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-  </head>
-  <body>
-    <div id="chart">
-      st=>start: Start|past:>http://www.google.com[blank]
-      e=>end: End:>http://www.google.com
-      op1=>operation: My Operation|past:$myFunction
-      op2=>operation: Stuff|current
-      sub1=>subroutine: My Subroutine|invalid
-      cond=>condition: Yes
-      or No?|approved:>http://www.google.com
-      c2=>condition: Good idea|rejected
-      io=>inputoutput: catch something...|request
-      para=>parallel: parallel tasks
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet" type="text/css">
 
-      st->op1(right)->cond
-      cond(yes, right)->c2
-      cond(no)->para
-      c2(true)->io->e
-      c2(false)->e
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-      para(path1, bottom)->sub1(left)->op1
-      para(path2, right)->op2->e
-    </div>
-    <script>
-      function myFunction(event, node) {
-        console.log("You just clicked this node:", node);
-      }
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen"/>
+
+    <title>Airta Portal</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/3.1.0/i18next.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-locize-backend/0.1.1/i18nextLocizeBackend.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/0.0.14/i18next-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/0.3.0/i18nextBrowserLanguageDetector.min.js"></script>
+
+</head>
+
+<body>
+<header>
+    <h1 data-i18n="title" data-i18n-options='{"defaultValue": "Airta Portal"}'></h1>
+    <p data-i18n="description"
+       data-i18n-options='{"defaultValue": "protal for flow script input. powered by flowchart.js"}'></p>
+
+</header>
+
+<div id="main">
+
+    <section id="demo1">
+        <table align="center" class="inner">
+            <tr>
+                <td style="vertical-align: top;">
+                    <button class="button" style="vertical-align:middle" onclick="startFlow()"><span>Start Flow </span></button>
+                    <h2 id="startEchoLabel">entry url</h2>
+                    <div class="editor-wrapper">
+                        <div class="editor editor1" id="id_flowscript">//demo input
+st=>start: Entry:>http://www.bing.com[blank]
+e=>end:>http://www.bing.com
+op1=>operation: My Operation
+sub1=>subroutine: My Subroutine
+cond=>condition: Yes
+or No?:>http://www.bing.com
+io=>inputoutput: catch something...
+para=>parallel: parallel tasks
+
+st->op1->cond
+cond(yes)->io->e
+cond(no)->para
+para(path1, bottom)->sub1(right)->op1
+para(path2, top)->op1
+                        </div>
+                    </div>
+                </td>
+                <td class="diagram diagram1">This should be a diagram! If you do not see it you need Javascript
+                    enabled
+                </td>
+            </tr>
+        </table>
+
+    </section>
+
+    <br/>
+    <hr/>
+    <br/>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+
+    <!-- Needed for the text editor -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js" type="text/javascript"
+            charset="utf-8"></script>
+
+    <script src="underscore-min.js"></script>
+    <script src="raphael-min.js"></script>
+
+    <script src="flowchart-latest.js"></script>
+    <script src="svginnerhtml.min.js"></script>
+
+    <script type="text/javascript">
+
+        function startFlow() {
+           // console.info(document.getElementsByClassName("ace_content").item(0).innerHTML);
+           // console.info(document.getElementsByClassName("ace_content").item(0).textContent);
+
+
+
+            var editor_div = $('#demo1').find(".editor" + 1);
+            var editor = ace.edit(editor_div.get(0));
+            editor.getSession().setMode("ace/mode/asciidoc");
+            console.info(editor.getValue().toString());
+            document.getElementById("startEchoLabel").innerText = editor.getURI;
+        }
+
+        function setup_editor(div, nr) {
+
+            var editor_div = div.find(".editor" + nr);
+            var diagram_div = div.find(".diagram" + nr);
+            var theme_div = div.find(".theme" + nr);
+
+            // Setup the editor diagram
+            var editor = ace.edit(editor_div.get(0));
+            editor.setTheme("ace/theme/crimson_editor");
+            editor.getSession().setMode("ace/mode/asciidoc");
+            editor.getSession().on('change', _.debounce(on_change, 100));
+
+            theme_div.change(on_change);
+            on_change();
+
+            function on_change() {
+                try {
+                    var diagram = flowchart.parse(editor.getValue());
+
+                    editor.getSession().setAnnotations([]);
+
+                    // Clear out old diagram
+                    diagram_div.html('');
+
+                    // Draw
+                    if (nr === 1 || nr === 3) {
+                        diagram.drawSVG(diagram_div.get(0));
+                    } else if (nr === 2) {
+                        diagram.drawSVG(diagram_div.get(0), {
+                            'flowstate': {
+                                'past': {'fill': '#CCCCCC', 'font-size': 12},
+                                'current': {'fill': 'yellow', 'font-color': 'red', 'font-weight': 'bold'},
+                                'future': {'fill': '#FFFF99'},
+                                'invalid': {'fill': '#444444'},
+                                'approved': {
+                                    'fill': '#58C4A3',
+                                    'font-size': 12,
+                                    'yes-text': 'APPROVED',
+                                    'no-text': 'n/a'
+                                },
+                                'rejected': {
+                                    'fill': '#C45879',
+                                    'font-size': 12,
+                                    'yes-text': 'n/a',
+                                    'no-text': 'REJECTED'
+                                }
+                            }
+                        });
+                    }
+
+                } catch (err) {
+                    var annotation = {
+                        type: "error", // also warning and information
+                        column: 0,
+                        row: 0,
+                        text: err.message
+                    };
+                    if (err && err.loc) {
+                        annotation.row = err.loc.first_line - 1;
+                        annotation.column = err.loc.first_column;
+                    }
+                    editor.getSession().setAnnotations([annotation]);
+                    throw err;
+                }
+            }
+        }
+
+        $(document).ready(function () {
+            // Example diagrams
+
+            // Setup all the editors
+            setup_editor($('#demo1'), 1);
+
+        });
+
+        $(document).ready(function () {
+            var i18nextOptions = {
+                fallbackLng: 'en',
+                backend: {
+                    referenceLng: 'en',
+                    projectId: '8166472e-7ac6-44e5-a53f-96a6ca165e2b'
+                }
+            };
+            var i18nextInstance = window.i18next
+                .use(window.i18nextLocizeBackend)
+                .use(window.i18nextBrowserLanguageDetector)
+                .init(i18nextOptions, function () {
+                    window.i18nextJquery.init(i18nextInstance, $, {
+                        tName: 't', // --> appends $.t = i18next.t
+                        i18nName: 'i18n', // --> appends $.i18n = i18next
+                        handleName: 'localize', // --> appends $(selector).localize(opts);
+                        selectorAttr: 'data-i18n', // selector for translating elements
+                        targetAttr: 'i18n-target', // data-() attribute to grab target element to translate (if diffrent then itself)
+                        optionsAttr: 'i18n-options', // data-() attribute that contains options, will load/set if useOptionsAttr = true
+                        useOptionsAttr: true, // see optionsAttr
+                        parseDefaultValueFromContent: true // parses default values from content ele.val or ele.text
+                    });
+
+                    $('body').localize();
+                });
+        });
     </script>
-		<script src="/node_modules/jquery/dist/jquery.js"></script>
-    <script src="/node_modules/raphael/raphael.js"></script>
-    <script src="/release/flowchart.js"></script>
-		<script>
-		$('#chart').flowChart();
-		</script>
-  </body>
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-42950201-1', 'adrai.github.io');
+        ga('send', 'pageview');
+    </script>
+</body>
 </html>
