--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen"/>
@@ -36,7 +36,9 @@
             <tr>
                 <td style="vertical-align: top;">
                     <button class="button" style="vertical-align:middle" onclick="startFlow()"><span>Start Flow </span></button>
-                    <h2 id="startEchoLabel">entry url</h2>
+                    <h2 id="startEchoLabel">
+                        <input type="url" id="id_entryUrlText" value="http://www.bing.com" ></input>
+                    </h2>
                     <div class="editor-wrapper">
                         <div class="editor editor1" id="id_flowscript">//demo input
 st=>start: Entry:>http://www.bing.com[blank]
@@ -69,7 +71,7 @@ para(path2, top)->op1
     <br/>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script>
 
     <!-- Needed for the text editor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js" type="text/javascript"
@@ -87,13 +89,31 @@ para(path2, top)->op1
            // console.info(document.getElementsByClassName("ace_content").item(0).innerHTML);
            // console.info(document.getElementsByClassName("ace_content").item(0).textContent);
 
-
-
             var editor_div = $('#demo1').find(".editor" + 1);
             var editor = ace.edit(editor_div.get(0));
             editor.getSession().setMode("ace/mode/asciidoc");
             console.info(editor.getValue().toString());
-            document.getElementById("startEchoLabel").innerText = editor.getURI;
+            document.getElementById("id_entryUrlText").setAttribute("value", "www.google.com");
+            document.getElementById("id_entryUrlText").setAttribute("disabled", "true");
+
+            $.ajax({
+                type: "POST",
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Accept': '*/*'
+                },
+                url: "http://localhost:8081/api/task/startflow",
+                data: {
+                    "flow": "aaa"
+                },
+                success: function (result) {
+                    console.log(result);
+                },
+                error: function (result) {
+                    console.log("error"+result.toString());
+                },
+                dataType: "json"
+            });
         }
 
         function setup_editor(div, nr) {
@@ -199,21 +219,6 @@ para(path2, top)->op1
         });
     </script>
 
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-42950201-1', 'adrai.github.io');
-        ga('send', 'pageview');
-    </script>
+</div>
 </body>
 </html>
